--- a/templates/reservation/newreservation.html.twig
+++ b/templates/reservation/newreservation.html.twig
@@ -35,7 +35,7 @@
 
                     {{ form_end(f) }}
 
-                    <a href="{{ 'reservationFormateur' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des reservations</a>
+                    <a href="{{ 'reservationEtudiant' }}" class="text-body"><i class="fas fa-long-arrow-alt-left me-2"></i>Retour à la liste des reservations</a>
                 </div>
             </div>
         </div>
